<resources>
    <string name="app_name">Nav_Drawer</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="setting">Setting</string>
    <string name="trash">Trash</string>
    <string name="sync">Sync</string>
    <string name="message">Message</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="communnicate">Communnicate</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>

