<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/home"/>

    <item
        android:id="@+id/nav_message"
        android:icon="@drawable/message"
        android:title="@string/message"/>

    <item
        android:id="@+id/nav_sync"
        android:icon="@drawable/sync"
        android:title="@string/sync"/>

    <item
        android:id="@+id/nav_trash"
        android:icon="@drawable/trash"
        android:title="@string/trash"/>

    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/settings"
        android:title="@string/setting"/>

    </group>

    <item
        android:title="@string/profile">

        <menu>
            <group>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/login"
                android:title="@string/login"/>
            </group>
        </menu>
    </item>

    <item
        android:title="@string/communnicate">

        <menu>
            <group>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share"
                android:title="@string/share">
            </item>
            <item
                android:id="@+id/nav_rate_us"
                android:icon="@drawable/rate_us"
                android:title="@string/rate_us">
            </item>
        </group>
        </menu>
    </item>

</menu>